src/component/calendar/snapshots/envision__component__calendar__tests__view_narrow_area.snap
---
source: src/component/calendar/tests.rs
expression: terminal.backend().to_string()
---
┌ March 2┐
│ Su  Mo │
│  1   2 │
│  8   9 │
└────────┘
