src/component/calendar/snapshots/envision__component__calendar__tests__view_with_title.snap
---
source: src/component/calendar/tests.rs
expression: terminal.backend().to_string()
---
┌ Events - March 2026 ─────────────────┐
│ Su  Mo  Tu  We  Th  Fr  Sa           │
│  1   2   3   4   5   6   7           │
│  8   9  10  11  12  13  14           │
│ 15  16  17  18  19  20  21           │
│ 22  23  24  25  26  27  28           │
│ 29  30  31                           │
│ ◀ PgUp          PgDn ▶               │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
